[CMake] Some Linux builds with precompiled headers enabled are broken https://bugs.webkit.org/show_bug.cgi?id=314763 rdar://177014051

Reviewed by Claudio Saavedra.

In some versions of clang on Linux, when a child PCH is built with
-Xclang -include-pch <parent>.pch, consumers of the child PCH see the
parent's #pragma once / include-guard state but not any of its defined
symbols. So the symbols are not present and also cannot be made present
with an #include statement.

I am inferring this explanation by experimental observation.

Workaround: Only do -include-pch in Apple clang, where we know it works.
Add an explicit #include in the child prefix header to catch the platforms
that don't do  -include-pch.

Also fix two issues exposed by enabling PCH on Linux clang:

* Source/JavaScriptCore/JavaScriptCoreJITPrefix.h:
* Source/JavaScriptCore/JavaScriptCorePrefix.h:
* Source/WebCore/WebCoreDOMAndRenderingPrefix.h:
* Source/WebCore/WebCoreInspectorPrefix.h:
* Source/WebCore/WebCoreJSBindingsPrefix.h:
* Source/WebCore/WebCorePrefix.h:
* Source/WebKit/WebKitMessageReceiversPrefix.h:
* Source/WebKit/WebKitPrefix.h:
* Source/WebKit/WebKitUIProcessPrefix.h:
* Source/WebKit/WebKitWebProcessPrefix.h:
Child prefix headers #include their parent; parent prefix headers gain

* Source/cmake/WebKitMacros.cmake:
(WEBKIT_ADD_PREFIX_HEADER_WITH_PARENT): Only inject the parent
-include-pch on Apple platforms.

* Source/ThirdParty/libwebrtc/CMakeLists.txt:
Set SKIP_PRECOMPILE_HEADERS on the AVX2/FMA and NEON source groups
because the compilation flags don't match.

* Source/WebKit/UIProcess/API/glib/APIContentRuleListStoreGLib.cpp:
Resolve pre-existing ambiguity in the name 'String'.

Canonical link: https://commits.webkit.org/313333@main