Source/WebCore/WebCoreInspectorPrefix.h
@@ -23,9 +23,7 @@
  * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  */
 
-/* Chained on top of WebCorePrefix.h; do not include that file here -- the
-   base PCH supplies it. Anchors below are headers that >=80% of inspector/
-   TUs include and that are not already in the base PCH closure. */
+#include "WebCorePrefix.h"
 
 #ifdef __cplusplus
 #undef new
